Prevent overscrolling on mobile fix

--- a/glasparade-static/glasparade-static/src/index.css
+++ b/glasparade-static/glasparade-static/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+@layer base {
+    html,
+    body,
+    #root {
+        @apply min-h-dvh bg-[#0b0b10] m-0;
+    }
+}
